tests/a/tests/integrity/fail/closure/closure.2.stderr
error: expected {b}{b}, found {root}{root}
 --> tests/integrity/fail/closure/closure.2.rs:9:13
  |
9 |     let y = f(5);
  |             ^^^^
